added files to project

--- a/poudre-dashboard-ng/src/index.html
+++ b/poudre-dashboard-ng/src/index.html
@@ -13,7 +13,11 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
   <script src="assets/bootstrap/js/bootstrap.js"></script>
   <!-- Leaflet -->
-  <link rel="stylesheet" href="assets/leaflet/css/leaflet.css">
+  <link rel="stylesheet" href="assets/leaflet/css/leaflet.css" />
+  <link rel="stylesheet" href="assets/leaflet/css/style1.css"/>
+  <link rel="stylesheet" href="assets/leaflet/css/leaflet.zoomhome.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/leaflet/css/L.Control.MousePosition.css"/>
   <script src="assets/leaflet/javascript/leaflet.js"></script>
 </head>
 <body>
