--- a/poudre-dashboard-ng/src/index.html
+++ b/poudre-dashboard-ng/src/index.html
@@ -19,6 +19,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/leaflet/css/L.Control.MousePosition.css"/>
   <script src="assets/leaflet/javascript/leaflet.js"></script>
+  <!-- Leaflet Sidebar -->
+  <link rel="stylesheet" href="../assets/leaflet-sidebar/css/leaflet-sidebar.css" />
+  <script src="assets/leaflet-sidebar/js/leaflet-sidebar.js"></script>
+
 </head>
 <body>
   <app-root></app-root>
