Reconfigured file paths

--- a/poudre-dashboard-ng/src/index.html
+++ b/poudre-dashboard-ng/src/index.html
@@ -20,15 +20,12 @@
   <link rel="stylesheet" href="assets/leaflet/css/L.Control.MousePosition.css"/>
   <script src="assets/leaflet/javascript/leaflet.js"></script>
   <!-- Leaflet Sidebar -->
-  <link rel="stylesheet" href="../assets/leaflet-sidebar/css/leaflet-sidebar.css" />
+  <link rel="stylesheet" href="assets/leaflet-sidebar/css/leaflet-sidebar.css" />
   <script src="assets/leaflet-sidebar/js/leaflet-sidebar.js"></script>
-
+  <!-- Load environment variables -->
+  <script src="env.js"></script>
 </head>
 <body>
-
-
-
-
   <app-root></app-root>
 </body>
 </html>
