cleaned up configuration files. resolves #32

--- a/poudre-dashboard-ng/src/index.html
+++ b/poudre-dashboard-ng/src/index.html
@@ -25,6 +25,11 @@
   <!-- Load environment variables -->
   <script src="env.js"></script>
 </head>
+<script>
+  window.DATA = {
+    configurationFile: 'assets/map-configuration-files/map-tabs-configuration.json'
+  }
+</script>
 <body>
   <app-root></app-root>
 </body>
