moved all 3rd party libraries (including leaflet) to angular.json

--- a/poudre-dashboard-ng/src/index.html
+++ b/poudre-dashboard-ng/src/index.html
@@ -1,17 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Poudre Basin</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/OWF-Logo-Favicon-32x32.png">
-  <!-- Leaflet -->
-  <link rel="stylesheet" href="assets/leaflet/css/leaflet.css" />
-  <link rel="stylesheet" href="assets/leaflet/css/leaflet.zoomhome.css"/>
-  <link rel="stylesheet" href="assets/leaflet/css/L.Control.MousePosition.css"/>
-  <script src="assets/leaflet/javascript/leaflet.js"></script>
 </head>
 <body>
   <app-root></app-root>
