--- a/poudre-dashboard-ng/src/index.html
+++ b/poudre-dashboard-ng/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/OWF-Logo-Favicon-32x32.png">
+  <!-- Stylesheet for style editing after distribution -->
+  <link rel="stylesheet" href="assets/style/style.css">
 </head>
 <body>
   <app-root></app-root>
