--- a/info-mapper/src/index.html
+++ b/info-mapper/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Poudre Basin</title>
+  <title>Info Mapper</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/OWF-Logo-Favicon-32x32.png">
