--- a/info-mapper/src/index.html
+++ b/info-mapper/src/index.html
@@ -5,9 +5,9 @@
   <title>Info Mapper</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/img/OWF-Logo-Favicon-32x32.png">
+  <link rel="icon" type="image/x-icon" href="assets/app-default/img/OWF-Logo-Favicon-32x32.png">
   <!-- Stylesheet for style editing after distribution -->
-  <link rel="stylesheet" href="assets/style/style.css">
+  <link rel="stylesheet" href="assets/app-default/style/style.css">
 </head>
 <body>
   <app-root></app-root>
