--- a/info-mapper/src/assets/app-default/data-maps/map-template-files/line-click.html
+++ b/info-mapper/src/assets/app-default/data-maps/map-template-files/line-click.html
@@ -1,1 +1,1 @@
-<b>Feature Properties:</b>\n<i>Name</i>: ${feature:GNIS_Name}\n<i>District</i>: ${feature:District}\n<i>ID</i>: ${feature:GNIS_ID}
+<b>Feature Properties:</b><br><br><b><i>Name</i></b>: ${feature.properties.GNIS_Name}<br><b><i>District</i></b>: ${feature.properties.District}<br><b><i>ID</i></b>: ${feature.properties.GNIS_ID}<br><br><button id="internal-graph" (click)="showGraph()">Show Graph</button>
