Issue #141, favicon is now configurable by using a favicon property in the app config file

--- a/info-mapper/src/index.html
+++ b/info-mapper/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/app-default/img/OWF-Logo-Favicon-32x32.png">
+  <link id="appFavicon" rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Stylesheet for style editing after distribution -->
   <link rel="stylesheet" href="assets/app-default/style/style.css">
 </head>
