Started work on implementing Google Analytics

--- a/info-mapper/src/index.html
+++ b/info-mapper/src/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Uncomment out to allow google analytics -->
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171414851-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  </script> -->
+
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link id="appFavicon" rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Stylesheet for style editing after distribution -->
   <link rel="stylesheet" href="assets/app-default/style/style.css">
+
 </head>
 <body>
   <app-root></app-root>
