--- a/infomapper/src/index.html
+++ b/infomapper/src/index.html
@@ -3,13 +3,16 @@
 <head>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- Uncomment out to allow google analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171414851-1"></script>
+  <script async
+          id="googleAnalytics"
+          src="">
+  </script>
+
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-  </script> -->
+  </script>
 
   <meta charset="utf-8">
   <base href="/">
