Issue #273: Corrected popups displayed in each of the dialogs

--- a/infomapper/src/index.html
+++ b/infomapper/src/index.html
@@ -3,9 +3,7 @@
 <head>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async
-          id="googleAnalytics"
-          src="">
+  <script async id="googleAnalytics" src="">
   </script>
 
   <script>
