Updated GA code

--- a/infomapper/src/index.html
+++ b/infomapper/src/index.html
@@ -3,9 +3,8 @@
 <head>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async id="googleAnalytics" src="">
-  </script>
-
+  <!-- Replace the ${googleAnalyticsTrackingId} property with the company Google Analytics property ID -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=${googleAnalyticsTrackingId}"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
